--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <!-- 選單 -->
             <ul class="nav nav-pills">
-              <li role="presentation" class="active"><a href="index.html">首頁</a></li>
+              <li role="presentation" class="active"><a href=" ">首頁</a></li>
               <li role="presentation"><a href=" ">所有文章</a></li>
               </ul>
           </div>
