--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="shortcut icon" href="images/favicon.ico">
+    <style>
+        /* 將單一元素置中並更改字體 */
+        h1.text-center {
+            text-align: center;
+            font-family: "標楷體", sans-serif; /* 設置為標楷體字型 */
+        }
+    </style>
   </head>
     <body>
 
@@ -25,6 +32,7 @@
           <!-- 在 xs 尺寸，佔12格，可參考 http://getbootstrap.com/css/#grid 說明-->
           <div class="col-xs-12">
             <!--網站標題-->
+              
             <h1 class="text-center">溫溼度感測</h1>
             <h5 class="text-center">
                 <p id="datetime"></p>
@@ -35,9 +43,9 @@
 
             <!-- 選單 -->
             <ul class="nav nav-pills">
-              <li role="presentation" class="active"><a href="index.php">首頁</a></li>
-              <li role="presentation"><a href="form.php">折線圖</a></li>
-              <li role="presentation"><a href="about.php">about</a></li>
+              <li role="presentation" class="active"><a href="index.html">首頁</a></li>
+              <li role="presentation"><a href="form.html">折線圖</a></li>
+              <li role="presentation"><a href="about.html">about</a></li>
               </ul>
           </div>
         </div>
