--- a/form.html
+++ b/form.html
@@ -31,7 +31,13 @@
     
     </style>
 
-
+    <style>
+        /* 將單一元素置中並更改字體 */
+        h1.text-center {
+            text-align: center;
+            font-family: "標楷體", sans-serif; /* 設置為標楷體字型 */
+        }
+    </style>
 
 
 </head>
