--- a/about.html
+++ b/about.html
@@ -25,7 +25,13 @@
         }
     </style>
 
-
+    <style>
+        /* 將單一元素置中並更改字體 */
+        h1.text-center {
+            text-align: center;
+            font-family: 'Cursive', cursive; /* 設置為 Cursive 字體 */
+        }
+    </style>
 </head>
 <body>
     <div class="jumbotron">
