--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         /* 將單一元素置中並更改字體 */
         h1.text-center {
             text-align: center;
-            font-family: 'Cursive', cursive; /* 設置為 Cursive 字體 */
+            font-family: "標楷體", sans-serif; /* 設置為標楷體字型 */
         }
     </style>
 </head>
