--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-    <title>溫溼度感測</title> <br> <br>
+    <title>溫溼度感測</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -143,7 +143,7 @@
         }
     </style>
 
-    <footer class="footer">
+     <footer class="footer">
         <p>&copy; 2024/3/18初稿 RCcc. orz.</p>
     </footer>
 
