--- a/form.html
+++ b/form.html
@@ -146,7 +146,7 @@
 
     <div class="input-box text-center">
         
-    <h2 class="text-center">
+    <h2 class="text-center"><br><br>
         變異係數 :<input type="text" id="variation" placeholder="輸入變異係數">
         <br>
         標準差&nbsp;&nbsp;&nbsp;&nbsp; :<input type="text" id="stdDeviation" placeholder="輸入標準差">
@@ -158,7 +158,9 @@
     </div>
 
 
-
+<br>
+    <br><br>
+    <br>
 
 
     <footer class="footer">
