--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <style>
         #infoContainer {
             display: flex;
-            flex-direction: column;
+            /*flex-direction: column;*/
             align-items: center;
         }
 
