--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
 
     <style>
         #infoContainer {
-            display: flex;
-            /*flex-direction: column;*/
+            /*display: flex;
+            flex-direction: column;
+            */
             align-items: center;
         }
 
