--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h3 id="humidityOutput"></h3>
         <h3 id="lastHumidityOutput"></h3>
         <h3 id="humidityChangeOutput"></h3>
-        <hr>
+        
         <h3 id="temperatureOutput"></h3>
         <h3 id="lastTemperatureOutput"></h3>
         <h3 id="temperatureChangeOutput"></h3>
@@ -136,7 +136,7 @@
 
     <style>
         #infoContainer {
-            /*display: flex;*/
+            display: flex;
             flex-direction: column;
             
             align-items: center;
