--- a/form.html
+++ b/form.html
@@ -147,9 +147,9 @@
     <div class="input-box text-center">
         
     <h2 class="text-center"><br><br>
-        變異係數 :<input type="text" id="variation" placeholder="輸入變異係數">
+        R  ② &nbsp;&nbsp;:<input type="text" id="variation" placeholder="輸入變異係數">
         <br>
-        標準差&nbsp;&nbsp;&nbsp;&nbsp; :<input type="text" id="stdDeviation" placeholder="輸入標準差">
+        方程式&nbsp;&nbsp; :<input type="text" id="stdDeviation" placeholder="輸入標準差">
     </h2>
 
     <!-- 輸入框 -->
