--- a/form.html
+++ b/form.html
@@ -146,10 +146,11 @@
 
     <div class="input-box text-center">
         
-    <h2 class="text-center"><br><br>
-        R  ② &nbsp;&nbsp;:<input type="text" id="variation" placeholder="輸入變異係數">
+    <h2 class="text-center">
+        <br><br>
+        R2 &nbsp;&nbsp;:<input type="text" id="variation" placeholder="輸入R②">
         <br>
-        方程式&nbsp;&nbsp; :<input type="text" id="stdDeviation" placeholder="輸入標準差">
+        方程式&nbsp;&nbsp; :<input type="text" id="stdDeviation" placeholder="輸入方程式">
     </h2>
 
     <!-- 輸入框 -->
