--- a/form.html
+++ b/form.html
@@ -148,7 +148,7 @@
         
     <h2 class="text-center">
         <br><br>
-        R2 &nbsp;&nbsp;:<input type="text" id="variation" placeholder="輸入R②">
+        R2 &nbsp;&nbsp; $nbsp;&nbsp;:<input type="text" id="variation" placeholder="輸入R②">
         <br>
         方程式&nbsp;&nbsp; :<input type="text" id="stdDeviation" placeholder="輸入方程式">
     </h2>
