--- a/form.html
+++ b/form.html
@@ -150,7 +150,7 @@
         <br><br>
         R2 &nbsp;&nbsp; $nbsp;&nbsp;:<input type="text" id="variation" placeholder="輸入R②">
         <br>
-        方程式&nbsp;&nbsp; :<input type="text" id="stdDeviation" placeholder="輸入方程式">
+        方程式 :<input type="text" id="stdDeviation" placeholder="輸入方程式">
     </h2>
 
     <!-- 輸入框 -->
